--- a/pom.xml
+++ b/pom.xml
@@ -1,64 +1,49 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <!-- Informacje o Twoim projekcie -->
+    
+    <!-- Zaktualizowane, aby pasowały do Twojej struktury -->
     <groupId>com.mycompany</groupId>
-    <artifactId>Sapo_leyendo</artifactId>
+    <artifactId>sapo_leyendo</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        
-        <!-- 
-          Ustawiamy wersję Javy na 23, tak jak w Twoim środowisku.
-          Użycie <maven.compiler.release> jest nowocześniejsze niż source/target.
-        -->
-        <maven.compiler.release>23</maven.compiler.release>
-        
-        <!-- Definiujemy klasę główną dla wtyczki exec -->
-        <exec.mainClass>com.mycompany.sapo_leyendo.Sapo_leyendo</exec.mainClass>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
-
+    
     <dependencies>
-        
-        <!-- 
-          TO JEST KLUCZOWY BRAKUJĄCY ELEMENT!
-          Ta sekcja mówi Mavenowi, aby automatycznie pobrał
-          sterownik SQLite (plik .jar) i dodał go do Twojego projektu.
-        -->
+        <!-- Sterownik SQLite JDBC (Konieczny do łączenia z bazą) -->
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.45.3.0</version> <!-- Używamy stabilnej wersji -->
+            <version>3.43.0.0</version>
         </dependency>
         
+        <!-- JUnit 5 (platforma do testów - na później) -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
     <build>
         <plugins>
-            <!-- Plugin do ustawienia wersji kompilatora Javy -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
-                <configuration>
-                    <!-- Upewniamy się, że plugin szanuje właściwość 'release' -->
-                    <release>${maven.compiler.release}</release>
-                </configuration>
-            </plugin>
-            
-            <!-- Plugin do uruchamiania (ten, którego używa NetBeans) -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <mainClass>${exec.mainClass}</mainClass>
-                </configuration>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
             </plugin>
         </plugins>
     </build>
-    
 </project>
